[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/main_menu.gd" type="Script" id=1]

[node name="main_menu" type="Node"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -34.0
margin_right = 64.0
margin_bottom = 34.0
rect_min_size = Vector2( 128, 0 )
alignment = 1

[node name="start" type="Button" parent="VBoxContainer"]
margin_right = 128.0
margin_bottom = 20.0
text = "Start"

[node name="settings" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 128.0
margin_bottom = 44.0
text = "Settings"

[node name="exit" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 128.0
margin_bottom = 68.0
text = "Exit"

[connection signal="pressed" from="VBoxContainer/start" to="." method="on_start"]
[connection signal="pressed" from="VBoxContainer/settings" to="." method="on_settings"]
[connection signal="pressed" from="VBoxContainer/exit" to="." method="on_exit"]
